test-suite/tests/fail/states/method_assert.stderr
error[E0599]: no method named `foo` found for struct `Test<(N, N, N)>` in the current scope
  --> tests/fail/states/method_assert.rs:18:17
   |
 4 | pub struct Test<#[stated] S>;
   | ---------------------------- method `foo` not found for this struct
...
18 |     Test::new().foo();
   |                 ^^^ method not found in `Test<(N, N, N)>`
   |
   = note: the method was found for
           - `Test<(Y, B, Y)>`
